Bug 31522 - [GM45] black screen at boot (0 backlight?)
Summary: [GM45] black screen at boot (0 backlight?)
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jani Nikula
URL:
Keywords:
Depends on:
Blocks: 27352
  Show dependency tree
 
Reported: 2011-03-20 18:30 UTC by Maciej Rutecki
Modified: 2013-02-09 14:23 UTC (History)
12 users (show)

See Also:
Kernel Version: 2.6.38
Tree: Mainline
Subsystem:
Regression: Yes


Attachments
lspci + dmesg (drm.debug=0xe) [gm45 chipset] (62.58 KB, text/plain)
2011-03-20 19:08 UTC, Melchior FRANZ
Details
lspci (2.78 KB, text/plain)
2012-05-14 21:13 UTC, Melchior FRANZ
Details
Output of "lspci -vmmnn" (3.84 KB, text/plain)
2012-11-16 12:15 UTC, Martins
Details
drm/i915: add quirk to invert brightness on eMachines e725 (1.36 KB, patch)
2013-01-22 10:44 UTC, Jani Nikula
Details | Diff
Output of lspci -vmmnn on eMachines 525 (3.83 KB, text/plain)
2013-02-02 20:31 UTC, Mateusz Lach
Details

Description Maciej Rutecki 2011-03-20 18:30:14 UTC
Subject    : i915/kms regression after 2.6.38-rc8 (was: Re: Linux 2.6.38)
Submitter  : Melchior FRANZ <melchior.franz@gmail.com>
Date       : 2011-03-16 17:30
Message-ID : 201103161830.52231@rk-nord.at
References : http://marc.info/?l=linux-kernel&m=130029706416659&w=2

This entry is being used for tracking a regression from 2.6.37. Please don't
close it until the problem is fixed in the mainline.
Comment 1 Melchior FRANZ 2011-03-20 19:08:11 UTC
Created attachment 51382 [details]
lspci + dmesg (drm.debug=0xe)  [gm45 chipset]
Comment 2 Justin P. Mattock 2011-03-20 22:14:39 UTC
broken here with S2R

full dmesg is here:
http://fpaste.org/HYVU/
Comment 3 Chris Wilson 2011-03-21 07:40:32 UTC
(In reply to comment #2)
> broken here with S2R

Different bug. Try revert a7a75c8f70d6f6a2f16c9f627f938bbee2d32718
Comment 4 Justin P. Mattock 2011-03-21 16:54:35 UTC
On 03/21/2011 12:40 AM, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=31522
>
>
> Chris Wilson<chris@chris-wilson.co.uk>  changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |chris@chris-wilson.co.uk
>
>
>
>
> --- Comment #3 from Chris Wilson<chris@chris-wilson.co.uk>   2011-03-21
> 07:40:32 ---
> (In reply to comment #2)
>> broken here with S2R
>
> Different bug. Try revert a7a75c8f70d6f6a2f16c9f627f938bbee2d32718
>

cool thanks... will try the revert and see!!

Justin P. Mattock
Comment 5 Chris Wilson 2011-04-05 12:47:54 UTC
commit ba3820ade317ee36e496b9b40d2ec3987dd4aef0
Author: Takashi Iwai <tiwai@suse.de>
Date:   Thu Mar 10 14:02:12 2011 +0100

    drm/i915: Revive combination mode for backlight control
    
    This reverts commit 951f3512dba5bd44cda3e5ee22b4b522e4bb09fb
    
        drm/i915: Do not handle backlight combination mode specially
    
    since this commit introduced other regressions due to untouched LBPC
    register, e.g. the backlight dimmed after resume.
Comment 6 Justin P. Mattock 2011-04-05 15:33:40 UTC
On Tue, 2011-04-05 at 12:47 +0000, bugzilla-daemon@bugzilla.kernel.org
wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=31522
> 
> 
> Chris Wilson <chris@chris-wilson.co.uk> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|NEW                         |RESOLVED
>          Resolution|                            |CODE_FIX
> 
> 
> 
> 
> --- Comment #5 from Chris Wilson <chris@chris-wilson.co.uk>  2011-04-05
> 12:47:54 ---
> commit ba3820ade317ee36e496b9b40d2ec3987dd4aef0
> Author: Takashi Iwai <tiwai@suse.de>
> Date:   Thu Mar 10 14:02:12 2011 +0100
> 
>     drm/i915: Revive combination mode for backlight control
> 
>     This reverts commit 951f3512dba5bd44cda3e5ee22b4b522e4bb09fb
> 
>         drm/i915: Do not handle backlight combination mode specially
> 
>     since this commit introduced other regressions due to untouched LBPC
>     register, e.g. the backlight dimmed after resume.
> 
not sure what the bug report says..cant seem to connect to it..will try
later as well as pull the latest on that machine to see if this is
fixed.

Justin P. Mattock
Comment 7 Justin P. Mattock 2011-04-06 15:09:48 UTC
On Tue, Apr 5, 2011 at 8:33 AM, Justin P. Mattock
<justinmattock@gmail.com> wrote:
> On Tue, 2011-04-05 at 12:47 +0000, bugzilla-daemon@bugzilla.kernel.org
> wrote:
>> https://bugzilla.kernel.org/show_bug.cgi?id=31522
>>
>>
>> Chris Wilson <chris@chris-wilson.co.uk> changed:
>>
>>            What    |Removed                     |Added
>> ----------------------------------------------------------------------------
>>              Status|NEW                         |RESOLVED
>>          Resolution|                            |CODE_FIX
>>
>>
>>
>>
>> --- Comment #5 from Chris Wilson <chris@chris-wilson.co.uk>  2011-04-05
>> 12:47:54 ---
>> commit ba3820ade317ee36e496b9b40d2ec3987dd4aef0
>> Author: Takashi Iwai <tiwai@suse.de>
>> Date:   Thu Mar 10 14:02:12 2011 +0100
>>
>>     drm/i915: Revive combination mode for backlight control
>>
>>     This reverts commit 951f3512dba5bd44cda3e5ee22b4b522e4bb09fb
>>
>>         drm/i915: Do not handle backlight combination mode specially
>>
>>     since this commit introduced other regressions due to untouched LBPC
>>     register, e.g. the backlight dimmed after resume.
>>
> not sure what the bug report says..cant seem to connect to it..will try
> later as well as pull the latest on that machine to see if this is
> fixed.
>
> Justin P. Mattock
>
>

o.k. finally pulled on that machine, and tested it out... everything works..
there is some messages in dmesg, but I dont think they are harmless..
(I can attache that as soon as I get back on that machine)
Comment 8 Melchior FRANZ 2011-04-26 16:09:41 UTC
This is not fixed. The screen still remains black here, even under 2.6.38.4, though under ideal conditions I can see that only the backlight is off. The problem was introduced with commit ba3820ade317ee36e496b9b40d2ec3987dd4aef0. It turned out that on this machine INTEL_INFO(dev)->gen equals 4, and is_backlight_combination_mode() returns 0x40000000.

Please tell me what more info you need.
Comment 9 Melchior FRANZ 2011-04-26 18:30:49 UTC
In 'intel_panel_get_backlight()' this happens:


  val = I915_READ(BLC_PWM_CTL) & BACKLIGHT_DUTY_CYCLE_MASK; // val = 0x0b4a
  if (IS_PINEVIEW(dev))                                     // false
          val >>= 1;

  if (is_backlight_combination_mode(dev)){
          u8 lbpc;

          val &= ~1;                                        // val = 0x0b4a
          pci_read_config_byte(dev->pdev, PCI_LBPC, &lbpc); // lbpc = 0
          val *= lbpc;                                      // val = 0
  }
Comment 10 Florian Mickler 2011-04-30 16:18:29 UTC
References: http://marc.info/?l=linux-kernel&m=130409270332174&w=2
Comment 11 Florian Mickler 2011-05-10 18:24:10 UTC
Patch: https://patchwork.kernel.org/patch/743162/

Is this patch going to be merged?
Comment 12 Melchior FRANZ 2011-06-13 09:59:49 UTC
The patch was based on an earlier bug description which turned out to be wrong. It doesn't fix the problem, which is still in 3.0-rc2+ (3c25fa740e20).

The real problem was identified as backwards LBPC values: 0x00 = bright, getting darker with growing values, 0xff = dark. See https://lkml.org/lkml/2011/5/17/157

In case someone wants to check their LBPC values:
  % lspci -xxx -s 00:02.0|awk '/^f0:/ {print $6}'   # get
  % setpci -s 00:02.0 F4.B=ff                       # set
Comment 13 Florian Mickler 2011-06-13 20:00:57 UTC
Ignore-Patch: https://patchwork.kernel.org/patch/743162/
Comment 14 Daniel Vetter 2012-03-25 13:33:29 UTC
Yet another Acer with inverted backlight. Please try the drm-intel-testing branch from

http://cgit.freedesktop.org/~danvet/drm-intel/

if that does not help, please attach the full output of lspci -vmmn so that we can add another quirk entry.
Comment 15 Jesse Barnes 2012-04-18 21:06:11 UTC
Assuming this is fixed now until we hear otherwise.
Comment 16 Melchior FRANZ 2012-04-18 23:18:28 UTC
No, it's not fixed, not until 3.3.1.

(Haven't tested later kernels yet, because the b43 driver hard-freezes the machine now, and I haven't had time to get into that far more serious problem.)

Please re-open, and don't close again until I say it's fixed.
Comment 17 Jesse Barnes 2012-04-18 23:25:01 UTC
You can't re-open?

I definitely sympathize with the b43 issue; I hate it when I upgrade the kernel to test something and some other driver totally breaks things.
Comment 18 Justin P. Mattock 2012-04-19 05:22:05 UTC
once I get to this machine and update everything I can give you a better answer to this.. as for i915 itself I have another machine that is getting choppy playback with flash(watching hulu) with using the latest linux-next(next-rc1 is fine as well as linus's current).
Comment 19 Daniel Vetter 2012-04-23 08:13:44 UTC
Note to self: We still need the test result on drm-intel-testing. If that alone does not work, please try with i915.i915_panel_invert_brightness=1 added to the kernel command line. If it works with the added parameter, please attach lspci -vmmn
Comment 20 Melchior FRANZ 2012-05-14 21:10:46 UTC
I'm sorry for the long delay.

The drm-intel tree as of today (25fcc53b96dd4801907d9b1cc4b76258ab0f3d65) doesn't fix the problem. The i915.i915_panel_invert_brightness=1 command, however, does. Unfortunately, it gets the horizontal screen resolution wrong on the console and in X, and it leads to wrong color artifacts. Without the "invert" line everything is fine (apart from the original problem: the black screen).

Thanks for your reply. Future responses will be quicker. A lot. (The b43 bug seems to be fixed.  :-)
Comment 21 Melchior FRANZ 2012-05-14 21:13:05 UTC
Created attachment 73293 [details]
lspci
Comment 22 Daniel Vetter 2012-05-19 22:58:55 UTC
Hm, can you double-check that the i915 module is still loaded with the additional commandline option? If it's mistyped, the kernel will refuse to load the kms driver and the display will be driven by the vbios/vga code.

Otherwise this result is expected, the invert brightness code is actually bogus. New patches are in the works, but atm I'm swamped. So don't hold your breath.
Comment 23 Melchior FRANZ 2012-06-02 11:03:51 UTC
Argh, you are right -- I missed that. dmesg says:

  i915: Unknown parameter `i915_panel_invert_brightness'

But that *was* the drm-intel-next kernel branch. Hmm ...
Comment 24 Daniel Vetter 2012-06-06 12:59:12 UTC
Ok, I've created a patch-series to fix up our backlight confusion on gen4+ Please test the backlight-confusion branch from my git repo at

http://cgit.freedesktop.org/~danvet/drm
Comment 25 Melchior FRANZ 2012-06-09 20:03:39 UTC
Same broken behaviour, I'm afraid. Screen stays black, "brightness down" key turns it on (and darker).
Comment 26 Daniel Vetter 2012-06-11 08:48:59 UTC
Ok, I've updated my backlight-confusion branch with new patches for gen4. Please retest, thanks.
Comment 27 Melchior FRANZ 2012-06-11 19:02:35 UTC
Works!  :-)
Comment 28 Melchior FRANZ 2012-06-11 19:09:28 UTC
Oh, wait. That was too quick: Yes, the screen is now bright at startup, but adjusting brightness does no longer work, which is worse. But still, looks like you are almost there.
Comment 29 Daniel Vetter 2012-06-11 19:25:00 UTC
Hm, back to square one actually :( Btw, what happens when you suspend/resume?
Comment 30 Jani Nikula 2012-08-28 09:44:50 UTC
(In reply to comment #26)
> Ok, I've updated my backlight-confusion branch with new patches for gen4.
> Please retest, thanks.

Updated patches and discussion at [1], also available in the "backlight" branch of [2]. Please test.

[1] http://thread.gmane.org/gmane.comp.freedesktop.xorg.drivers.intel/13642
[2] git://gitorious.org/jani/drm.git
Comment 31 Jani Nikula 2012-09-17 12:36:49 UTC
Please try i915.invert_brightness=1 module parameter with kernel version v3.5 or later, see if that fixes the brightness issue, and report 'lspci -vmmnn' if it does.
Comment 32 Daniel Vetter 2012-11-13 11:27:53 UTC
Reporter seems to be awol, closing this. Please reopen once you have the things tested as request in comment #31, thanks.
Comment 33 Justin P. Mattock 2012-11-15 01:33:12 UTC
yeah this was fixed for me with the dell inspiron 600 unfortunately
that machine crapped out on me to the point I had to retire it.
so I agree with closing this one.  unless anybody else has objections

On Tue, Nov 13, 2012 at 3:27 AM,  <bugzilla-daemon@bugzilla.kernel.org> wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=31522
>
>
> Daniel Vetter <daniel@ffwll.ch> changed:
>
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|NEEDINFO                    |RESOLVED
>          Resolution|                            |INSUFFICIENT_DATA
>
>
>
>
> --- Comment #32 from Daniel Vetter <daniel@ffwll.ch>  2012-11-13 11:27:53 ---
> Reporter seems to be awol, closing this. Please reopen once you have the
> things
> tested as request in comment #31, thanks.
>
> --
> Configure bugmail: https://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
Comment 34 Melchior FRANZ 2012-11-16 06:07:14 UTC
My machine doesn't boot from disk at the moment -- after an OpenSUSE update a while ago, and because the disk is encrypted, restoration is a bit more work than I had time for when I came home late from work. But I've planned to make it work again within a week or two and then I'll test (and reopen if necessary). I'm sorry for the delay.
Comment 35 Martins 2012-11-16 12:15:46 UTC
Created attachment 86511 [details]
Output of "lspci -vmmnn" 

Required output of 'lspci -vmmnn'. Using Ubuntu 12.10, kernel 3.5.0-18-generic, on eMachines e725.

The parameter "i915.invert_brightness=1" did solve the issue, although recently I still experienced the black screen again (when closing the laptop, while another monitor was connected. Unable to reproduce the problem, though).

Please comment if additional info is necessary.
Comment 36 Jānis Ķengurs Kangarooo 2012-12-18 04:02:38 UTC
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/765438/comments/58
"I FOUND bug
needs confirmation
i just tested witch works and since when doest until 4 in row from http://kernel.ubuntu.com/~kernel-ppa/mainline/
Confirm by installing kernels

No this bug using:
[DIR] v2.6.36.4-natty/ 18-Feb-2011 11:34 - http://kernel.ubuntu.com/~kernel-ppa/mainline/v2.6.36.4-natty/
This bug starts in every next kernel since:
[DIR] v2.6.37-natty/ 05-Jan-2011 11:23 - http://kernel.ubuntu.com/~kernel-ppa/mainline/v2.6.37-natty/

take files starting with linux-image-*** ending with *** your architecture i386.deb or amd64.deb
then install them and restart in each kernel.
For my Emachines E525 this is how i wrote.
"
Comment 37 Jani Nikula 2013-01-22 10:44:37 UTC
Created attachment 91631 [details]
drm/i915: add quirk to invert brightness on eMachines e725

(In reply to comment #35)
> Created an attachment (id=86511) [details]
> Output of "lspci -vmmnn" 
> 
> Required output of 'lspci -vmmnn'. Using Ubuntu 12.10, kernel
> 3.5.0-18-generic,
> on eMachines e725.

Martins, please try the attached patch. Do *not* use i915.invert_brigthness=1 module parameter when you try it.

The patch should fix the issue on the particular machine reported in comment #35. Anyone having a backlight issue that i915.invert_brigthness=1 fixes, please report 'lspci -vmmnn' along with the vendor and model of the machine.
Comment 38 Daniel Vetter 2013-01-22 11:54:40 UTC
Patch merged for drm-intel-next:

commit 01e3a8feb40e54b962a20fa7eb595c5efef5e109                                                                                      
Author: Jani Nikula <jani.nikula@intel.com>                                                                                          
Date:   Tue Jan 22 12:50:35 2013 +0200                                                                                               
                                                                                                                                     
    drm/i915: add quirk to invert brightness on eMachines e725
Comment 39 Mateusz Lach 2013-02-02 20:31:01 UTC
Created attachment 92451 [details]
Output of lspci -vmmnn on eMachines 525
Comment 40 Mateusz Lach 2013-02-02 20:34:55 UTC
Hello,

Parameter i915.invert_brigthness=1 helps with a build-in backlight on eMachines e525 notebook with Intel video card (GM45), but with this parameter the resolution is fixed to 1024x768 on a widescreen monitor and cannot be changed. I also attached result of lspci -vmmnn. I look now with hope into the future :) Thanks for great work.

Greetings,
Mateusz Lach
Comment 41 Jani Nikula 2013-02-05 13:36:54 UTC
Mateusz -

(In reply to comment #40)
> Parameter i915.invert_brigthness=1 helps with a build-in backlight on
> eMachines
> e525 notebook with Intel video card (GM45), but with this parameter the
> resolution is fixed to 1024x768 on a widescreen monitor and cannot be
> changed.

Well, that's not right. I see that you're not one of the earlier reporters of the bug, and we just can't go about adding quirks with insufficient information.

First, you have a typo above for the module parameter. Did you make the same typo in your config? That would explain the symptoms. But does it fix the issue anymore? And what exactly is *your* issue in the first place?

I think we'd prefer a new bug for each quirk no matter what, just for tracking purposes (for example, if something goes wrong with the fix to your problem, we don't want to reopen and revisit this already fixed bug). Please file a new bug with your symptoms, whether i915.invert_brightness=1 (with the correct spelling) helps them, and your 'lspci -vmmnn'. The fix can be swift once we confirm the facts. Thanks.
Comment 42 Mateusz Lach 2013-02-09 14:23:18 UTC
Hello,

Jani, I made this typo only here in the comment. My issue in the first place is black screen at boot time and later after the X are loaded (all the time exactly). Parameter i915.invert_brightness=1 helps me with this issue the same way as "nomodeset". So the backlight works perfect, but I have problem with resolution of screen. 

Summary:
1. For me the reported bug is fixed with i915.invert_brightness=1,
2. There are some problems, but I will report them as a new bug, as you suggested.

Thank you very much :)

Note You need to log in before you can comment on or make changes to this bug.